--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'kotlin-android'
 }
 
@@ -8,13 +8,13 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.umalt.fruithub"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -32,10 +32,10 @@ android {
     }
 }
 
+def javax_inject_version = '1'
+
 dependencies {
-    implementation project(':data')
-    implementation project(':network')
-    implementation project(':database')
     implementation project(':domain')
-    implementation project(':presentation')
+
+    api "javax.inject:javax.inject:$javax_inject_version"
 }
