--- a/database/build.gradle
+++ b/database/build.gradle
@@ -1,6 +1,7 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -8,13 +9,13 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.umalt.fruithub"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -32,10 +33,13 @@ android {
     }
 }
 
+def room_version = '2.2.6'
+
 dependencies {
     implementation project(':data')
-    implementation project(':network')
-    implementation project(':database')
-    implementation project(':domain')
-    implementation project(':presentation')
+
+    // Room persistence library
+    api "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 }
