--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,4 +105,7 @@ dependencies {
     // Dagger
     implementation "com.google.dagger:dagger:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
+
+    implementation "dev.chrisbanes.insetter:insetter:0.5.0"
+    implementation "dev.chrisbanes.insetter:insetter-widgets:0.5.0"
 }
